# ppc

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
ppc/: __init__.py
ppc/src/_ppc/: CMakeLists.txt  _ppc_pybind.cpp  example1.cpp  example2.cpp  example2.hpp
tests/: test_ppc.py
